<resources>
    <string name="app_name">MyApp</string>
    <string name="description_imageView_Lenna">Picture used to test photo manipulation methods.</string>

    /* Strings used in menu */
    <string name="toGray">toGray</string>
    <string name="equalColors">contrast-equalizer</string>
    <string name="overexp">overexposure</string>
    <string name="averageBlur">average Blur</string>
    <string name="gaussBlur">Gaussian Blur</string>
    <string name="contour">Contouring</string>
    <string name="sharpContours">Sharpen Contours</string>
    <string name="tint">Change Tint</string>
    <string name="grayAndTint">to Gray with tint</string>
    /* End of strings in menu */

    /* Strings for buttons */
    <string name="resetButton">RESET</string>
    /* End strings for buttons */
</resources>
