<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/toGray"
        android:title="@string/toGray" />
    <item
        android:id="@+id/equalColors"
        android:title="@string/equalColors" />
    <item
        android:id="@+id/overexp"
        android:title="@string/overexp" />
    <item
        android:id="@+id/averageBlur"
        android:title="@string/averageBlur" />
    <item
        android:id="@+id/gaussBlur"
        android:title="@string/gaussBlur" />
    <item
        android:id="@+id/contouring"
        android:title="@string/contour" />
    <item
        android:id="@+id/sharpenContours"
        android:title="@string/sharpContours" />
    <item
        android:id="@+id/changeTint"
        android:title="@string/tint" />
    <item
        android:id="@+id/grayAndTint"
        android:title="@string/grayAndTint" />
</menu>